fix position for `#editOptions` (move back to top & try to align horizontally with the left-hand sidebar items)

--- a/ui/styles/app.less
+++ b/ui/styles/app.less
@@ -191,13 +191,12 @@ main {
 
         #editOptions {
             position: absolute;
-            top: 50vh - 2.25rem;
-            right: 20px;
+            top: 15px;
+            right: 15px;
             z-index: 10;
 
             .editOption {
                 background: white;
-                padding: 1.5rem;
                 border: 3px solid lightgray;
                 border-radius: 50%;
                 font-size: 2rem;
